name:                   continuum
stability:              experimental
description:            Continuum Database Client
version:                0.1.0.8
license:                MIT
license-file:           LICENSE
author:                 Alex Petrov
maintainer:             alexp@coffeenco.de
build-type:             Simple
cabal-version:          >=1.10

Flag Binaries
  description:          Build examples
  default:              False
  manual:               True

Flag Profiling
  description:          Profiling mode
  default:              False
  manual:               True

source-repository head
  type:     git
  location: https://github.com/ifesdjeen/continuum.git

library
  default-language:     Haskell2010
  if flag(Profiling)
    ghc-options:        -fprof-auto -rtsopts -rtsopts -O2 -Wall -threaded
  else
    ghc-options:        -Wall -O2 -threaded -threaded -rtsopts

  hs-source-dirs:       src
  extra-libraries:      hyperleveldb
  other-extensions:     CPP, MagicHash

  exposed-modules:        Continuum.Storage
                        , Continuum.ParallelStorage
                        , Continuum.Cluster
                        , Continuum.Options
                        , Continuum.Types
                        , Continuum.Folds

  build-depends:          base                   >= 4 && < 5
                        , continuum-client       >= 0.1.0.0
                        , process                >= 1.2.0.0
                        , foldl                  >= 1.0.5
                        , mtl                    >2.1
                        , containers             >0.5
                        , time                   >=1.4.2
                        , timers                 >=0.2.0.0
                        , stm                    >=2.4.3
                        , suspend                >=0.1.0.1
                        , leveldb-haskell-fork   >= 0.3.4.1
                        , resourcet              >= 1.1.2.2
                        , bytestring             >= 0.10.4.0
                        , parallel-io            >= 0.3.3
                        , cereal                 >= 0.4.0.1
                        , data-default           >= 0.5.3
                        , transformers           >= 0.4.1.0
                        , transformers-base      >= 0.4.1 && < 0.5
                        , nanomsg-haskell        >= 0.2.2
                        , network                >= 2.2.1.7


test-suite tests
  default-language:       Haskell2010
  type:                   exitcode-stdio-1.0
  ghc-options:            -Wall
  main-is:                Main.hs
  hs-source-dirs:         tests

  other-modules:          Serialization.Test
                        , Storage.Test

  build-depends:          base                   >= 3 && < 5
                        , continuum              >= 0.1.0.8
                        , continuum-client       >= 0.1.0.0
                        , hspec                  >= 2.0.1
                        , process                >= 1.2.0.0
                        , bytestring             >= 0.10.4.0
                        , mtl                    > 2.1
                        , transformers           >= 0.4.1.0
                        , QuickCheck             >= 2.7.6
                        , hspec-expectations     >= 0.6.0.1

executable continuum-server
  default-language:       Haskell2010
  hs-source-dirs:         exec/

  if flag(Binaries)
    buildable:      True
  else
    buildable:      False

  if flag(Profiling)
    ghc-options:          -prof -fprof-auto -rtsopts -rtsopts -O2 -Wall -threaded
  else
    ghc-options:          -Wall -rtsopts -O2 -threaded

  main-is:                Server.hs

  build-depends:          base                   >= 4 && < 5
                        , continuum              >= 0.1.0.8
                        , continuum-client       >= 0.1.0.0

executable continuum-shell-client
  default-language:       Haskell2010
  hs-source-dirs:         exec/

  if flag(Binaries)
    buildable:      True
  else
    buildable:      False

  if flag(Profiling)
    ghc-options:          -prof -fprof-auto -rtsopts -rtsopts -O2 -Wall -threaded
  else
    ghc-options:          -Wall -rtsopts -O2 -threaded

  main-is:                ShellClient.hs

  build-depends:          base                   >= 4 && < 5
                        , continuum-client       >= 0.1.0.0
                        , aeson                  >= 0.8.0.2
                        , containers             >0.5
                        , text                   >=1.2.0.0
                        , bytestring             >= 0.10.4.0
