name:                   continuum
stability:              experimental
description:            Continuum Database
version:                0.1.0.8
license:                MIT
license-file:           LICENSE
author:                 Alex Petrov
maintainer:             alexp@coffeenco.de
build-type:             Simple
cabal-version:          >=1.10

source-repository head
  type:     git
  location: https://github.com/ifesdjeen/continuum.git

library
  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -rtsopts -threaded

  hs-source-dirs:       src
  other-extensions:       CPP
                        , ForeignFunctionInterface
                        , MagicHash

  exposed-modules:      Continuum.Types
                      , Continuum.Core
                      , Continuum.Serialization.Primitive
                      , Continuum.Serialization.Value
                      , Continuum.Serialization.Record
                      , Continuum.Serialization.Schema

  other-modules:        Continuum.Schema
                        , Continuum.Record
  build-depends:          base                   >= 4 && < 5
                        , process                >= 1.2.0.0
                        , bytestring             >= 0.10.6.0
                        , containers             >= 0.5.6.3
                        , transformers           >= 0.4.3.0
                        , mtl                    >= 2.2.1
                        , cereal                 >= 0.4.1.1
                        , leveldb-haskell        >= 0.6.2
test-suite tests
  default-language:       Haskell2010
  type:                   exitcode-stdio-1.0
  ghc-options:            -Wall -O2 -threaded
  main-is:                Spec.hs
  hs-source-dirs:         tests

  other-modules:          Continuum.Serialization.PrimitiveSpec,
                          Continuum.Serialization.RecordSpec

  build-depends:          base                   >= 4 && < 5
                        , continuum              >= 0.1.0.8
                        , bytestring             >= 0.10.4.0
                        , QuickCheck             >= 2.8.1
                        , hspec-expectations     >= 0.6.1.1
                        , hspec                  >= 2.1.7
