name:                continuum-client
stability:           experimental
description:         Continuum Database Client
version:             0.1.0.1
license:             MIT
license-file:        LICENSE
author:              Alex Petrov
maintainer:          alexp@coffeenco.de
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ifesdjeen/continuum.git

library
  default-language:     Haskell2010
  exposed-modules:      Continuum.Client.Base
                        , Continuum.Common.Types
                        , Continuum.Common.Serialization
                        , Continuum.Common.Primitive
  hs-source-dirs:       src
  build-depends:          base                   >= 4 && < 5
                        , containers             >0.5
                        , bytestring             >= 0.10.4.0
                        , cereal                 >= 0.4.0.1
                        , nanomsg-haskell        >= 0.2.2
                        , time                   >=1.4.2
                        , mtl                    >2.1

test-suite tests
  default-language:       Haskell2010
  type:                   exitcode-stdio-1.0
  ghc-options:            -Wall
  main-is:                Main.hs
  hs-source-dirs:         tests

  other-modules:          Serialization.Test
                        , Primitive.Test

  build-depends:          base                   >= 3 && < 5
                        , continuum-client       >= 0.1.0.1
                        , hspec                  >= 2.0.1
                        , hspec-expectations     >= 0.6.0.1
                        , bytestring             >= 0.10.4.0
                        , QuickCheck             >= 2.7.6
